welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:5: error: not found: value num
	s/num.length
          ^