welcome.lessons.welcome.array.averagevalue.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
	var y:Int = 0
	var s:Int = 0
	for ( x <- 0 to nums.length-1) { y = nums(x); s = s + y }
	s/num.length
}
	
